--- a/D3js_Flask/templates/about.html
+++ b/D3js_Flask/templates/about.html
@@ -60,5 +60,8 @@
             <strong>Enroll Now!</strong>
         </p>
     </div>
+    <footer>
+        This page is just a sample, and does not have any actual information.
+    </footer>
 </body>
 </html>
